status/hu/hungarian/1.0.0/macos/darwin-23.5.0/gnat=10.3.2/hungarian-1.0.0.yaml.log
Test ran at 2024-07-23 01:28:16.339445+00:00

SOLUTION:
hungarian=1.0.0: Ada wrapper for the fast Stachniss' Hungarian solver
Origin: source archive v1.0.0.tar.gz at https://github.com/mosteo/hungarian/archive/v1.0.0.tar.gz with hash sha512:f68365050bcdbaea00cae17601ddc3c2d6d5156bef038875c3594d310c756b0ac51c1b9c751b593f7ab59393eca3f109205bab9b7557a7a2b6ecfa0e1dcf3fd1
Properties:
   Author: alejandro@mosteo.com
   Description: Ada wrapper for the fast Stachniss' Hungarian solver
   GPR Scenario: Build_Type := Debug | Release | No_Option | Profile
   License: LGPL-3.0-only
   Maintainer: alejandro@mosteo.com
   Maintainers_Logins: mosteo
   Name: hungarian
   Version: 1.0.0


LOG:
Note: Deploying hungarian=1.0.0...
#=#=#                                                                          
##O#-#                                                                         
##O=#  #                                                                       
#=#=-#  #                                                                      
-#O#- #   #                                                                    
Note: Building hungarian/hungarian.gpr...
Compile
   [C]            hungarian.c
   [Ada]          hungarian_solver.adb
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/_stdio.h:68,
                 from /Users/runner/.config/alire/cache/dependencies/gnat_native_10.3.2_e112fd3f/lib/gcc/x86_64-apple-darwin19.6.0/10.3.0/include-fixed/stdio.h:78,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/f7091cf4-14dc-4b40-be94-6a494224d74e/hungarian_1.0.0_f6836505/3rdparty/hungarian.c:27:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~

   compilation of hungarian.c failed

gprbuild: *** compilation phase failed
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/f7091cf4-14dc-4b40-be94-6a494224d74e/hungarian_1.0.0_f6836505/hungarian.gpr"] exited with code 4
ERROR: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/f7091cf4-14dc-4b40-be94-6a494224d74e/hungarian_1.0.0_f6836505/hungarian.gpr"] exited with code 4
stderr: ALIRE.CHECKED_ERROR
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/f7091cf4-14dc-4b40-be94-6a494224d74e/hungarian_1.0.0_f6836505/hungarian.gpr"] exited with code 4
stderr: raised ALIRE.CHECKED_ERROR : alire-stored-error:1
Load address: 0x104cf7000
Call stack traceback locations:
0x1055ff415 0x1052d2e83 0x1054e5df9 0x1054e6581 0x105446ac3 0x105444f99 0x105461873 0x1054addc1 0x1054ac81a 0x1054619b8 0x105445349 0x104d569c1 0x104d67578 0x104d6c01c 0x104df205c 0x104dfd3b8 0x104cf8605 0x104cfb914


Warning: hungarian=1.0.0 successfully retrieved but its build failed.
There are no dependencies.
ERROR: Build ended with errors
